--- a/_includes/manuals/3.11/1.2_release_notes.md
+++ b/_includes/manuals/3.11/1.2_release_notes.md
@@ -4,23 +4,248 @@ This section will be updated prior to the next release.
 
 ### Headline features
 
+#### Greatly decreased JavaScript size for plugins
+
+Previously, Foreman's whole JavaScript bundle was duplicated in every plugin.
+Now a separate bundle is generated that Foreman and each plugin can reuse.
+In most plugins, we saw a 2 to 3 MB reduction in size.
+Depending on the number of plugins, this can save a significant amount in transfer size.
+While Foreman does compress and cache these JavaScript bundles, they still had to be loaded all the time.
+
+For more details, see https://projects.theforeman.org/issues/37252 and https://projects.theforeman.org/issues/37391.
+
+#### Running Foreman on Enterprise Linux 9 is fully supported
+
+Foreman 3.10 only supported Enterprise Linux 9 as experimental, but with this release it is fully supported.
+
 ### Upgrade warnings
 
-#### PostgreSQL upgraded to 13 on Enterprise Linux 8
+#### keycloak-httpd-client-install dropped from Enterprise Linux 9
 
-On Enterprise Linux 8 PostgreSQL is upgraded from 12 to 13, to match the version used on Enterprise Linux 9.
-Users are required to change the DNF module, but the actual upgrade, including data migration, happens when the installer is executed for the first time.
-During the upgrade a backup of the data is created in `/var/lib/pgsql/data-old`.
-This backup can be removed once the upgrade is completed.
+Foreman has shipped its own `keycloak-httpd-client-install` package because initially the version shipped in Enterprise Linux 7 was too old to support ODIC.
+Recently it was noticed that the version in Enterprise Linux 8 contains the required features but still contains a https://issues.redhat.com/browse/RHEL-31496[packaging bug].
+The version in Enterprise Linux 9 contains all the required features but is older than what Foreman has shipped.
+Foreman 3.10 was the first release on Enterprise Linux 9 and it was marked as experimental.
+As a result, the decision has been made to remove it from Foreman's Enterprise Linux 9 packaging.
+Users who have this package installed should downgrade it using `dnf downgrade keycloak-httpd-client-install`.
+
+For more details, see https://projects.theforeman.org/issues/37334.
 
 ### Deprecations
 
+#### Running Foreman on Enterprise Linux 8 removal in Foreman 3.13
+
+Now that running on Enterprise Linux 9 is fully supported, running on Enterprise Linux 8 is deprecated.
+Foreman 3.13 will drop this support so users are encouraged to plan their upgrade.
+
+Note this is for running Foreman itself.
+Clients will remain supported.
+
+For more details and discussion, see https://community.theforeman.org/t/drop-support-for-running-on-el8-with-foreman-3-13/38083.
+
 ### Release Notes
+
+### Release notes for 3.11.0
+#### Foreman
+* Incorrect translation in registration command validation ([#37490](https://projects.theforeman.org/issues/37490))
+* Drop bookworm/sid workaround now that bookworm is released ([#37484](https://projects.theforeman.org/issues/37484))
+* Unable to modify "manage column" in path "hosts -&gt; all hosts" while using custom roles ([#37463](https://projects.theforeman.org/issues/37463))
+* Don't use the Kickstart rhsm for RHEL 9 ([#37461](https://projects.theforeman.org/issues/37461))
+* A lot of dynflow deprecation warning because of sidekiq config.options usage ([#37444](https://projects.theforeman.org/issues/37444))
+* Provide multiple repositories when you want to register a host ([#37440](https://projects.theforeman.org/issues/37440))
+* Prevent XSS issue for katello angular pages ([#37437](https://projects.theforeman.org/issues/37437))
+* Remove timed_cache_store.rb ([#37436](https://projects.theforeman.org/issues/37436))
+* Fix Style/GlobalStdStream cop ([#37432](https://projects.theforeman.org/issues/37432))
+* Rake snapshots:generate is broken ([#37422](https://projects.theforeman.org/issues/37422))
+* Foreman and Anaconda are not in sync when deploying RHEL9: both keyfiles/snippets and ifcfg-xxx files are generated ([#37367](https://projects.theforeman.org/issues/37367))
+* Some APIs / params are not marked as deprecated ([#37274](https://projects.theforeman.org/issues/37274))
+* OS bootfiles API not working because of misspelled class ([#37270](https://projects.theforeman.org/issues/37270))
+* Upgrade to PostgreSQL 13 on EL8 ([#37208](https://projects.theforeman.org/issues/37208))
+* Pull provider installation template crash ([#37193](https://projects.theforeman.org/issues/37193))
+* Race condition in smart proxy test ([#37150](https://projects.theforeman.org/issues/37150))
+* Alphabetical sorting in test broken ([#37132](https://projects.theforeman.org/issues/37132))
+* Allow pagelets on User and Usergroups edit page ([#37002](https://projects.theforeman.org/issues/37002))
+* Add Clevis/Tang disk encryption template ([#36885](https://projects.theforeman.org/issues/36885))
+* Enable connectefi scsi for grub2 by default ([#36691](https://projects.theforeman.org/issues/36691))
+* iPXE Discovery Only Works On net0 ([#36502](https://projects.theforeman.org/issues/36502))
+
+#### Foreman - Authentication
+* After Foreman installation login page respond with  "Invalid Timezone: Etc/Unknown"
+ ([#37069](https://projects.theforeman.org/issues/37069))
+
+#### Foreman - Compute resources - VMware
+* Hardware versions for VMWare VSphere 8.0 and 8.0U2 are missing ([#37244](https://projects.theforeman.org/issues/37244))
+* VMWare Guest OS list is outdated ([#36023](https://projects.theforeman.org/issues/36023))
+
+#### Foreman - Database
+* Invalid kwargs handling in FindCommon ([#37273](https://projects.theforeman.org/issues/37273))
+
+#### Foreman - Host creation
+* Creating a host without a comment and then editing it and submitting without any changes creates an update audit record for the nil-&gt;'' transition of comment ([#37224](https://projects.theforeman.org/issues/37224))
+
+#### Foreman - Host groups
+* Hostgroup facets are not cloned when cloning hostgroup ([#37179](https://projects.theforeman.org/issues/37179))
+
+#### Foreman - Host registration
+* Domain is not removed in the details page when the DNS is not configured/enabled in the installer ([#37231](https://projects.theforeman.org/issues/37231))
+* Use subscription-manager for debian hosts ([#33664](https://projects.theforeman.org/issues/33664))
+
+#### Foreman - Internationalization
+* Update fast_gettext to ~&gt; 2.1 ([#36574](https://projects.theforeman.org/issues/36574))
+
+#### Foreman - JavaScript stack
+* Use host_details_ui in React context ([#37489](https://projects.theforeman.org/issues/37489))
+* Webpack - Prevent react duplicates in core ([#37391](https://projects.theforeman.org/issues/37391))
+* Drop unused typeToIcon function ([#37387](https://projects.theforeman.org/issues/37387))
+* Drop toggleRowGroup and filter_permissions functions ([#37386](https://projects.theforeman.org/issues/37386))
+* Drop check_all_roles and uncheck_all_roles event handlers ([#37385](https://projects.theforeman.org/issues/37385))
+* always use cached manifest json to find webpack chunks, not only for JS ([#37353](https://projects.theforeman.org/issues/37353))
+* Webpack assets not compressed after Webpack 5 migration ([#37344](https://projects.theforeman.org/issues/37344))
+* remove unused typeAheadSelect ([#37280](https://projects.theforeman.org/issues/37280))
+* _victoryCore.Helpers.isFunction is not a function ([#37255](https://projects.theforeman.org/issues/37255))
+* Webpack - Prevent foreman core duplicates in plugins ([#37252](https://projects.theforeman.org/issues/37252))
+* Fix javascript method for webpack_asset_paths  ([#37199](https://projects.theforeman.org/issues/37199))
+
+#### Foreman - Packaging
+* Allow rdoc 6.4 on Ruby 3.1 ([#35463](https://projects.theforeman.org/issues/35463))
+
+#### Foreman - Performance
+* Iterate on hashes when both key and value are used ([#37287](https://projects.theforeman.org/issues/37287))
+
+#### Foreman - Plugin integration
+* Facets with hostgroup inherit override host-specific facet values ([#37043](https://projects.theforeman.org/issues/37043))
+
+#### Foreman - Reporting
+* Expose execution interface's attributes in Ansible Inventory report template if available  ([#37374](https://projects.theforeman.org/issues/37374))
+* Getting "undefined method '#id' for NilClass::Jail (NilClass)" error when generating Ansible inventory report ([#37215](https://projects.theforeman.org/issues/37215))
+* Satellite "Registered Content Hosts" report generates incorrect hosts' kernel version  ([#37184](https://projects.theforeman.org/issues/37184))
+* SCA-Only: Remove Subscription-Entitlement report ([#37167](https://projects.theforeman.org/issues/37167))
+* Host - Statuses report failing "unknown keywords: :Name, :Global" ([#37065](https://projects.theforeman.org/issues/37065))
+
+#### Foreman - Settings
+* default_$taxonomy setting descriptions only mention Puppet instead of all facts ([#37488](https://projects.theforeman.org/issues/37488))
+
+#### Foreman - TFTP
+* kickstart_kernel_options deprecation warning - ks param on rhel8
+ ([#37343](https://projects.theforeman.org/issues/37343))
+
+#### Foreman - Templates
+* API 'build_pxe_default' with taxonomies ([#37439](https://projects.theforeman.org/issues/37439))
+* foreman_bootdisk templates not seeded ([#37421](https://projects.theforeman.org/issues/37421))
+* Fix snapshot:generate task ([#37337](https://projects.theforeman.org/issues/37337))
+* Add current time macro ([#37282](https://projects.theforeman.org/issues/37282))
+* Registration before & after snippets ([#37189](https://projects.theforeman.org/issues/37189))
+* Ubuntu 22.04.3 needs adaption user-data template ([#37011](https://projects.theforeman.org/issues/37011))
+
+#### Foreman - Tests
+* Use @redhat-cloud-services/frontend-components-utilities@4.0.7 ([#37312](https://projects.theforeman.org/issues/37312))
+* Use PostgreSQL by default in tests ([#37241](https://projects.theforeman.org/issues/37241))
+
+#### Foreman - Unattended installations
+* Debian boot_file_sources uses transform_vars but preseed_path does not ([#36830](https://projects.theforeman.org/issues/36830))
+* kickstart's RHSM line only works on RHEL hosts ([#36525](https://projects.theforeman.org/issues/36525))
+
+#### Foreman - Users, Roles and Permissions
+* Provide a scope for email-notification-eligible users ([#36891](https://projects.theforeman.org/issues/36891))
+
+#### Foreman - Web Interface
+* Edit comment from host details  ([#37443](https://projects.theforeman.org/issues/37443))
+* Use nightly for links to manual in Foreman develop ([#37434](https://projects.theforeman.org/issues/37434))
+* Add more control over SelectAllCheckbox ([#37307](https://projects.theforeman.org/issues/37307))
+* As a web UI user, I can choose what columns to display on the new All Hosts page ([#37293](https://projects.theforeman.org/issues/37293))
+* New hosts index - Change content source link has no href ([#37248](https://projects.theforeman.org/issues/37248))
+* results.map should appear directly in HostsIndex index.js ([#37247](https://projects.theforeman.org/issues/37247))
+* Add main action button to PermissionDenied component ([#37236](https://projects.theforeman.org/issues/37236))
+* Generic table always shows actions   ([#37233](https://projects.theforeman.org/issues/37233))
+
+#### Foreman - foreman-debug
+* Drop upload functionality from foreman-debug ([#37406](https://projects.theforeman.org/issues/37406))
+
+#### Installer
+* Use rubocop cmdline parameters according to version 0.80.1 ([#37393](https://projects.theforeman.org/issues/37393))
+* Exclude all subdirectories for vendor in .rubocop.yaml ([#37392](https://projects.theforeman.org/issues/37392))
+* Foreman-maintain command for container label migration + incorporate into post-upgrade task ([#37357](https://projects.theforeman.org/issues/37357))
+* Drop setup plugin ([#37298](https://projects.theforeman.org/issues/37298))
+* Ensure correct Java is used with Puppetserver 8 ([#37291](https://projects.theforeman.org/issues/37291))
+* Add gitlab CI config ([#37261](https://projects.theforeman.org/issues/37261))
+* Add feature in katello-certs-check to verify if CA bundle has any certificates with trust rules  ([#37063](https://projects.theforeman.org/issues/37063))
+* Getting http 500 internal server error due to "ActiveRecord::ConnectionTimeoutError: could not obtain a connection from the pool within 5.000 seconds" ([#33974](https://projects.theforeman.org/issues/33974))
+
+#### Installer - Foreman modules
+* During upgrade to Katello 4.11 issues are seen with Candlepin keystore ([#37384](https://projects.theforeman.org/issues/37384))
+* Installer should configure container gateway to use Postgres ([#37325](https://projects.theforeman.org/issues/37325))
+* Fix apache config so REMOTE_USER is not unset for pulpcore registry ([#37308](https://projects.theforeman.org/issues/37308))
+* Retire foreman-hooks from installer ([#37296](https://projects.theforeman.org/issues/37296))
+* Support for Avatars broken by ProxyPass ([#37211](https://projects.theforeman.org/issues/37211))
+
+#### Installer - foreman-installer script
+* Puppet server ciphers updated in 2.0 but old ciphers can remain in answers ([#37306](https://projects.theforeman.org/issues/37306))
+* Default PostgreSQL password encryption to SCRAM ([#37297](https://projects.theforeman.org/issues/37297))
+* Upgrade to PostgreSQL 13 on EL8 ([#37177](https://projects.theforeman.org/issues/37177))
+
+#### Packaging
+* Retire foreman-hooks ([#37295](https://projects.theforeman.org/issues/37295))
+* Retire foreman_setup plugin ([#37212](https://projects.theforeman.org/issues/37212))
+
+#### Packaging - RPMs
+* Patch puma to fix chunked upload issue ([#37419](https://projects.theforeman.org/issues/37419))
+* Drop keycloak-httpd-client-install from EL9 ([#37334](https://projects.theforeman.org/issues/37334))
+* Katello::Errors::Pulp3Error: module 'createrepo_c' has no attribute 'SHA1' ([#37332](https://projects.theforeman.org/issues/37332))
+* Use PostgreSQL 13 module in Foreman's modular metadata on EL8 ([#37210](https://projects.theforeman.org/issues/37210))
+
+#### Smart Proxy
+* Free IPs service is not started for MS DHCP ([#37450](https://projects.theforeman.org/issues/37450))
+* Tests fail inside docker container ([#37413](https://projects.theforeman.org/issues/37413))
+
+#### Smart Proxy - DHCP
+* Creating a DHCP host can cause an IPv6 address to be looked up ([#37355](https://projects.theforeman.org/issues/37355))
+
+#### Smart Proxy - TFTP
+* Smart Proxy TFTP fetching writes out broken files on HTTP errors ([#37147](https://projects.theforeman.org/issues/37147))
+
+*A full list of changes in 3.11.0 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12]=1807)*
 
 ### Contributors
 
 We'd like to thank the following people who contributed to the Foreman {{page.version}} release:
 
-<!-- update scripts/committers.rb with the correct versions and dates and fill this in -->
+Adam Hosek,
+Adam Růžička,
+Alexander Olofsson,
+Archana Kumari,
+Bastian Schmidt,
+Bernhard Suttner,
+Eric Helms,
+Evgeni Golov,
+Ewoud Kohl van Wijngaarden,
+Girija Soni,
+Greg Cox,
+Griffin Sullivan,
+Hao Yu,
+Ian Ballou,
+Jan Löser,
+Jeremy Lenz,
+Joniel Pasqualetto,
+Leos Stejskal,
+Maria Agaphontzev,
+Markus Bucher,
+Martin Alfke,
+Matěj Mudra,
+Maximilian Kolb,
+Nadja Heitmann,
+Nofar Alfassi,
+Oleh Fedorenko,
+Pat Riehecky,
+Samir Jha,
+Sayan Das,
+Sebastian Bublitz,
+Shimon Shtein,
+Thorben Denzer,
+Tim Meusel,
+Zach Huntington-Meath,
+cocker-cc,
+dosas,
+jmott85,
+Et7f3
 
 As well as all users who helped test releases, report bugs and provide feedback on the project.
